fix(content_header): z-index issues

--- a/apps/client/src/widgets/containers/content_header.css
+++ b/apps/client/src/widgets/containers/content_header.css
@@ -11,6 +11,5 @@
 .content-header-widget.floating {
     position: sticky;
     top: 0;
-    z-index: 11;
     background-color: var(--main-background-color, #fff) !important;
 }
